- `wsgi.get_current_url` is now ascii safe for browsers sending
  non-ascii data in query strings.
- improved parsing behavior for :func:`werkzeug.http.parse_options_header`
- added more operators to local proxies.
- added a hook to override the default converter in the routing
  system.
- The description field of HTTP exceptions is now always escaped.
  Use markup objects to disable that.

Version 0.8.4
-------------

(bugfix release, release date to be announced)

- Added a favicon to the debugger which fixes problem with
  state changes being triggered through a request to
  /favicon.ico in Google Chrome.  This should fix some
  problems with Flask and other frameworks that use
  context local objects on a stack with context preservation
  on errors.
- Fixed an issue with scolling up in the debugger.
- Fixed an issue with debuggers running on a different URL
  than the URL root.
- Fixed a problem with proxies not forwarding some rarely
  used special methods properly.
- Added a workaround to prevent the XSS protection from Chrome
  breaking the debugger.
- Skip redis tests if redis is not running.
- Fixed a typo in the multipart parser that caused content-type
  to not be picked up properly.

Version 0.8.3
-------------

(bugfix release, released on February 5th 2012)

- Fixed another issue with :func:`werkzeug.wsgi.make_line_iter`
  where lines longer than the buffer size were not handled
  properly.
- Restore stdout after debug console finished executing so
  that the debugger can be used on GAE better.
- Fixed a bug with the redis cache for int subclasses
  (affects bool caching).
- Fixed an XSS problem with redirect targets coming from
  untrusted sources.
- Redis cache backend now supports password authentication.

Version 0.8.2
-------------

(bugfix release, released on December 16th 2011)

- Fixed a problem with request handling of the builtin server
  not responding to socket errors properly.