@@ -59,6 +59,13 @@ class WSGIUtilsTestCase(WerkzeugTestCase):
         assert wsgi.get_host(create_environ('/', 'http://example.org')) \
             == 'example.org'
 
+    def test_get_host_validation(self):
+        env = {'HTTP_X_FORWARDED_HOST': 'example.org',
+               'SERVER_NAME': 'bullshit', 'HOST_NAME': 'ignore me dammit'}
+        self.assert_equal(wsgi.get_host(env, trusted_hosts=['.example.org']),
+                          'example.org')
+        self.assert_raises(BadRequest, wsgi.get_host, env, trusted_hosts=['example.com'])
+
     def test_responder(self):
         def foo(environ, start_response):
             return BaseResponse('Test')
